<resources>
    <string name="app_name" translatable="false">Dev Community</string>
    <string name="app_logo" translatable="false">Dev Community Logo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">News</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_events">Events</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_faqs" translatable="false">FAQs</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second" translatable="false">Home Second</string>

    <string name="signIn_error_bold">UPS&#8230; couldn\'t Sign In</string>
    <string name="signIn_error_explanation">Your username and password don\'t match.\nPlease, try again.</string>
    <string name="signIn_error_email_pattern">Please, enter a valid email.</string>
    <string name="signIn_error_button">TRY AGAIN</string>
    <string name="login_error_image" translatable="false">Login error image</string>
    <string name="signIn_message">Sign In</string>
    <string name="signIn_anonymous_message">Anonymous User</string>
    <string name="continue_anonymous_message">Continue Anonymously</string>
    <string name="signIn_email_et_message">Email</string>
    <string name="signIn_password_et_message">Password</string>

    <string name="preference_file_key" translatable="false">cat.urv.deim.asm.p2.PREFERENCE_FILE_KEY</string>
    <string name="preference_first_time" translatable="false">preference_first_time</string>
    <string name="preference_logged_user" translatable="false">preference_logged_user</string>

    <string name="tutorial_skip">Skip tutorial</string>
    <string name="tutorial_message_1">Be in touch</string>
    <string name="tutorial_message_2">Networking</string>
    <string name="tutorial_message_3">Learn</string>

    <string name="email_example" translatable="false">example@mail.com</string>
    <string name="password_example" translatable="false">password</string>
    <string name="username_sample" translatable="false">Sandra Adams</string>
    <string name="user_profile_description" translatable="false">User profile image</string>
    <string name="action_search">Search</string>
    <string name="article_image_descriptor" translatable="false">Article header image</string>
</resources>
