<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/activity_menu">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_menu_articles"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_calendar" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/profile_menu">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/help_menu">
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_menu_faqs"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
