<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="cat.urv.deim.asm.p2.common.ui.news.NewsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_news"/>
    <fragment
        android:id="@+id/nav_articles"
        android:name="cat.urv.deim.asm.p2.common.ui.articles.ArticlesFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_articles" />
    <fragment
        android:id="@+id/nav_calendar"
        android:name="cat.urv.deim.asm.p2.common.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/nav_events"
        android:name="cat.urv.deim.asm.p2.common.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
    <activity
        android:id="@+id/nav_profile"
        android:name="cat.urv.deim.asm.p2.common.ProfileActivity"
        android:label="ProfileActivity" />
</navigation>