<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:contentDescription="@string/user_profile_description"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/username_sample"
        android:textSize="@dimen/username_text"
        android:textColor="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@+id/user_photo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/profile_body_padding"
        android:paddingTop="16dp"
        android:paddingEnd="10dp"
        android:text="@string/email_example"
        android:textColor="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/profile_body_padding"
        android:paddingEnd="10dp"
        android:paddingBottom="@dimen/profile_body_padding"
        android:text="Email"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>